# mimkl

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CTestCustom.cmake  LICENSE  MAINTAINERS.md  README.md  clang_format_code.sh  setup.py  setup_mimkl.sh
.travis/: deploy.sh
doc/: Doxyfile.in
docker/: Dockerfile  docker-compose.yml
include/mimkl/: data_structures.hpp  definitions.hpp  io.hpp  kernels.hpp  kernels_handler.hpp  linear_algebra.hpp  models.hpp  solvers.hpp  utilities.hpp
include/mimkl/data_structures/: data_frame.hpp  utilities.hpp
include/mimkl/kernels/: kernel.hpp  kernel_induction.hpp
include/mimkl/models/: average_mkl.hpp  easy_mkl.hpp  model.hpp  umkl_knn.hpp
include/mimkl/solvers/: komd.hpp  solver.hpp
python/: CMakeLists.txt
python/pymimkl/: CMakeLists.txt  __init__.py  average_mkl.py  easy_mkl.py  umkl_knn.py  utils.py  wrapper.cpp
src/: CMakeLists.txt
src/mimkl/: CMakeLists.txt  definitions.cpp  io.cpp  kernels_handler.cpp  linear_algebra.cpp  utilities.cpp
src/mimkl/data_structures/: data_frame.cpp  utilities.cpp
src/mimkl/kernels/: kernel.cpp  kernel_induction.cpp
src/mimkl/models/: average_mkl.cpp  easy_mkl.cpp  model.cpp  umkl_knn.cpp
src/mimkl/solvers/: komd.cpp  solver.cpp
test/: CMakeLists.txt
test/average_mkl/: CMakeLists.txt  main.cpp
test/data/: both_headers_tsv.txt  column_only_headers_tsv.txt  index_only_headers_tsv.txt  simple_csv.csv  simple_csv2.csv  simple_tsv.txt
test/data_frame/: CMakeLists.txt  main.cpp
test/diagonal_from_square_induction/: CMakeLists.txt  main.cpp
test/dlib/: CMakeLists.txt  main.cpp
test/easy_mkl/: CMakeLists.txt  main.cpp
test/gaussian_induction/: CMakeLists.txt  main.cpp
test/io/: CMakeLists.txt  main.cpp
test/kernel_lambdas/: CMakeLists.txt  main.cpp
test/kernels_handler/: CMakeLists.txt  main.cpp
test/linear_algebra/: CMakeLists.txt  main.cpp  main.hpp
test/linear_induction/: CMakeLists.txt  main.cpp
test/polynomial_induction/: CMakeLists.txt  main.cpp
test/pybind11/: CMakeLists.txt  example.cpp  example.hpp  example.py  example_wrapper.cpp
test/pymimkl/: CMakeLists.txt  test.py
test/sigmoidal_induction/: CMakeLists.txt  main.cpp
test/sparse_diagonal/: CMakeLists.txt  main.cpp
test/umkl_knn/: CMakeLists.txt  main.cpp
