# list of all the tests
add_subdirectory(pybind11)
add_subdirectory(pymimkl)
add_subdirectory(linear_induction)
add_subdirectory(sparse_diagonal)
add_subdirectory(polynomial_induction)
add_subdirectory(diagonal_from_square_induction)
add_subdirectory(gaussian_induction)
add_subdirectory(sigmoidal_induction)
add_subdirectory(data_frame)
add_subdirectory(io)
add_subdirectory(dlib)
add_subdirectory(kernel_lambdas)
add_subdirectory(linear_algebra)
add_subdirectory(kernels_handler)
add_subdirectory(easy_mkl)
add_subdirectory(umkl_knn)
add_subdirectory(average_mkl)